# huest

./: .gitignore  Cargo.toml  Cross.toml  Dockerfile  Notes.md  README.md  Rocket.toml  build-rpi0.sh  certs-traefik.yaml  reverseproxy.py
.cargo/: config.toml
.devcontainer/: devcontainer.json  docker-compose.yml
.github/workflows/: cross_compile.yml
config/: Bridge.yaml  Devices.yaml  a.yaml
docker_dev/: Dockerfile  docker.sh
src/: bridge.rs  devices.rs  hue_mdns.rs  main.rs  ssdp.rs  util.rs
src/hue_api/: bridge_config_controller.rs  device_model.rs  hue_config_controller.rs  hue_config_model.rs  hue_device_model.rs  hue_mdns.rs  hue_routes.rs  hue_ssdp.rs  hue_types.rs  hue_util.rs  mod.rs
src/hue_api/devices/: WLED.rs  mod.rs
src/hue_api/devices/wled/: mod.rs  responses.rs
src/hue_api/hue_routes/: Configuration.rs  configuration.rs  groups.rs  lights.rs  mod.rs
src/hue_api/hue_routes/v1/: capabilities.rs  configuration.rs  groups.rs  lights.rs  mod.rs  sensors.rs
src/hue_api/hue_routes/v2/: bridge.rs
src/hue_api/hue_types/: Config.rs  Device.rs  Group.rs  Responses.rs  mod.rs
src/hue_api/types/: Config.rs  Group.rs  mod.rs
src/hue_api/types/internal/: device.rs  group.rs  mod.rs
src/hue_api/types/v1/: configuration.rs  datastore.rs  group.rs  light.rs  mod.rs  responses.rs
src/hue_api/types/v2/: grouped_light.rs  mod.rs  responses.rs
ssl/: cert.pem  private.pem
static/: description.xml
