[package]
name = "huest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
serde_json = "1.0"
actix-web = { version = "4.1.0", features = ["openssl"] }
ureq = { version = "2.4.0", default-features = false }
scraper = "0.13.0"
openssl = { version = "0.10", features = ["v110", "vendored"] }
env_logger = "0.9.0"
log = "0.4.0"
mac_address = "1.1.3"
lazy_static = "1.4.0"
hex = "0.4.3"
local-ip-address = "0.4.4"
clap = { version = "3.1.18", features = ["derive"] }
#zeroconf = "0.10.5"
uuid = { version = "1.1.2", features = ["v1", "v4", "fast-rng"] }
rand = "0.8.5"
chrono = "0.4"
futures = "0.3.21"



[target.'cfg(target_arch = "x86")'.dependencies]
zeroconf = "0.10.5"

[target.'cfg(target_arch = "x86_64")'.dependencies]
zeroconf = "0.10.5"


[[bin]]
name = "huest"
path = "src/main.rs"
