[package]
name = "huest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
serde_json = "1.0"
actix-web = { version = "4.1.0", default-features = false, features = ["rustls", "macros", "compress-gzip", "compress-brotli"] }
ureq = { version = "2.4.0", default-features = false }
scraper = "0.13.0"
rustls = "0.20.6"
rustls-pemfile = "1.0.0"
env_logger = "0.9.0"
log = "0.4.0"
once_cell = "1.13.0"
hex = "0.4.3"
clap = { version = "3.1.18", features = ["derive"] }
libmdns = "0.7"
uuid = { version = "1.1.2", features = ["v1", "v4", "fast-rng"] }
rand = "0.8.5"
chrono = "0.4"
futures = "0.3.21"
default-net = "0.11.0"

[[bin]]
name = "huest"
path = "src/main.rs"
