[package]
name = "huest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
strum = "0.24.1"
strum_macros = "0.24.1"
phf = { version = "0.11.1", default-features = false, features = ["macros"] }
serde_yaml = "0.9.16"
serde_json = "1.0"
actix-web = { version = "4.1.0", default-features = false, features = ["openssl", "macros", "compress-gzip", "compress-brotli"] }
actix-rt = "2.7.0"
async-trait = "0.1.64"
awc = { version = "3.0.0", features = ["openssl"] }
reqwest = { version = "0.11.14", features = ["json", "default-tls"] }
scraper = "0.14.0"
openssl = { version = "0.10.41", features = ["vendored"] }
env_logger = "0.10.0"
log = "0.4.0"
once_cell = "1.13.0"
hex = "0.4.3"
clap = { version = "4.1.1", features = ["derive"] }
libmdns = "0.7"
uuid = { version = "1.1.2", features = ["v1", "v4", "v5", "fast-rng"] }
rand = "0.8.5"
chrono = "0.4"
futures = "0.3.21"
futures-util = "0.3.25"
default-net = "0.12.0"

[[bin]]
name = "huest"
path = "src/main.rs"
